--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@medusajs/medusa": "^1.1.37",
     "@medusajs/medusa-cli": "^1.1.16",
+    "cross-env": "^7.0.3",
     "medusa-fulfillment-manual": "^1.1.20",
     "medusa-interfaces": "^1.1.21",
     "medusa-payment-manual": "^1.0.2",
